# cpl

./: .clang-format  .gitignore  .gitmodules
2023-exam-1-nomark/: Bye-JonaBell.c  CMakeLists.txt  reverse.c  tictactoe-2.c  tictactoe.c
2023-exam-2-nomark/: CMakeLists.txt  WanderBell.c  coded-lock.c  fake_news.c
2024-0-intro/: A.c  B.c  C.c  CMakeLists.txt
2024-1-types-io-marked/: CMakeLists.txt  ascii.c  change.c  equation.c  gas.c  julian.c  pi-2.c  sensor.c
2024-1-types-io-nomark/: CMakeLists.txt  gravity.c  pi-1.c  pmtdm.c  swap.c  time.c
2024-10-linked-list-marked/: CMakeLists.txt  buddy.c  cycle-detect.c
2024-10-linked-list-marked/2024-10-linked-list-marked/: buddy.c  keyboard.c
2024-10-linked-list-nomark/: CMakeLists.txt  file-management.c  stack-pour.c  string-hash.c
2024-2-if-for-array-marked/: CMakeLists.txt  blackhole.c  converter-1.c  factorial-1.c  single.c  standup.c  triangle.c
2024-2-if-for-array-nomark/: CMakeLists.txt  Inverse.c  clock.c  collatz.c  factorial-2.c  leap.c  prime.c  rank.c  selfpower.c  series.c
2024-3-for-a-while-marked/: CMakeLists.txt  b-ternary-1.c  b-ternary-2.c  bubble-sort.c  flip.c  josephus.c  palindrome-1.c
2024-3-for-a-while-nomark/: CMakeLists.txt  a + b problem RE.c  calculator.c  calendar.c  decimal.c  gcd.c  multiplication-table.c  palindrome-2.c  quick-sort.c  super-cal.c
2024-4-loops-marked/: CMakeLists.txt  behaviors.c  bit.c  guess.c  magic-square.c  match.c  matrix-mult.c  mines-1.c  sudoku.c
2024-4-loops-nomark/: .clang-format  CMakeLists.txt  equation-2.c  formation.c  life.c  obstacle.c  seer.c  similarity.c  softmax.c  statistics.c  trace.c
2024-5-function-marked/: CMakeLists.txt  absolute-prime.c  converter-2.c  next-permutation.c  pair.c  radix.c  sum.c
2024-6-data-types-marked/: CMakeLists.txt  brackets.c  buddy.c  counting.c  mines-2.c  whac-a-mole.c  wine.c
2024-6-data-types-nomark/: CMakeLists.txt  cuboid.c  queue.c  rotate.c  stack.c
2024-7-pointers-arrays-marked/: BigTitle.c  CMakeLists.txt  interpreter.c  pife.c  substr.c
2024-8-pointers-strings-marked/: CMakeLists.txt  parse.c  strs_cat.c  strs_interleaf.c  tokenizer.c
2024-9-double-pointers-struct/: .clang-format  CMakeLists.txt  bsearch.c  fifa.c  polynlist.c  split-sort.c
browser/: CMakeLists.txt  browser.c
final-exams/: CMakeLists.txt  b-ternary.c  bsearch.c  bubble-sort.c  checker.c  counting.c  ddl.c  gobang.c  lineup.c  memory.c  merge.c  recog.c  rna.c  rolling.c  sorted.c  unrolled-linked-list.c  whac-a-mole.c
