cmake_minimum_required(VERSION 3.29)
project(2024-1-types-io-marked C)

set(CMAKE_C_STANDARD 17)
add_executable(ascii.c 2024-1-types-io-marked/ascii.c)
add_executable(change.c 2024-1-types-io-marked/change.c)
add_executable(pi-2.c 2024-1-types-io-marked/pi-2.c)
add_executable(sensor.c 2024-1-types-io-marked/sensor.c)
add_executable(julian.c 2024-1-types-io-marked/julian.c)
add_executable(gas.c 2024-1-types-io-marked/gas.c)
add_executable(equation.c 2024-1-types-io-marked/equation.c)