cmake_minimum_required(VERSION 3.29)
project(2024-1-types-io-marked C)

set(CMAKE_C_STANDARD 17)
add_executable(ascii.c ascii.c)
add_executable(change.c change.c)
add_executable(pi-2.c pi-2.c)
add_executable(sensor.c sensor.c)
add_executable(julian.c julian.c)
add_executable(gas.c gas.c)
add_executable(equation.c equation.c)