cmake_minimum_required(VERSION 3.29)
project(2024-1-types-io-nomark C)

set(CMAKE_C_STANDARD 17)
add_executable(pmtdm.c 2024-1-types-io-nomark/pmtdm.c)
add_executable(swap.c 2024-1-types-io-nomark/swap.c)
add_executable(pi-1.c 2024-1-types-io-nomark/pi-1.c)
add_executable(gravity.c 2024-1-types-io-nomark/gravity.c)
add_executable(time.c 2024-1-types-io-nomark/time.c)