cmake_minimum_required(VERSION 3.29)
project(2024-2-if-for-array-marked C)

set(CMAKE_C_STANDARD 17)

add_executable(triangle.c 2024-2-if-for-array-marked/triangle.c)
add_executable(single.c 2024-2-if-for-array-marked/single.c)
add_executable(factorial-1.c 2024-2-if-for-array-marked/factorial-1.c)
add_executable(converter-1.c 2024-2-if-for-array-marked/converter-1.c)
add_executable(blackhole.c 2024-2-if-for-array-marked/blackhole.c)
add_executable(standup.c 2024-2-if-for-array-marked/standup.c)