cmake_minimum_required(VERSION 3.29)
project(2024-2-if-for-array-marked C)

set(CMAKE_C_STANDARD 17)

add_executable(triangle.c triangle.c)
add_executable(single.c single.c)
add_executable(factorial-1.c factorial-1.c)
add_executable(converter-1.c converter-1.c)
add_executable(blackhole.c blackhole.c)
add_executable(standup.c standup.c)