cmake_minimum_required(VERSION 3.29)
project(2024-2-if-for-array-nomark C)

set(CMAKE_C_STANDARD 17)

add_executable(rank.c 2024-2-if-for-array-nomark/rank.c)
add_executable(clock.c 2024-2-if-for-array-nomark/clock.c)
add_executable(leap.c 2024-2-if-for-array-nomark/leap.c)
add_executable(selfpower.c 2024-2-if-for-array-nomark/selfpower.c)
add_executable(series.c 2024-2-if-for-array-nomark/series.c)
add_executable(collatz.c 2024-2-if-for-array-nomark/collatz.c)
add_executable(Inverse.c 2024-2-if-for-array-nomark/Inverse.c)
add_executable(factorial-2.c 2024-2-if-for-array-nomark/factorial-2.c)
add_executable(prime.c 2024-2-if-for-array-nomark/prime.c)
