cmake_minimum_required(VERSION 3.29)
project(2024-2-if-for-array-nomark C)

set(CMAKE_C_STANDARD 17)

add_executable(rank.c rank.c)
add_executable(clock.c clock.c)
add_executable(leap.c leap.c)
add_executable(selfpower.c selfpower.c)
add_executable(series.c series.c)
add_executable(collatz.c collatz.c)
add_executable(Inverse.c Inverse.c)
add_executable(factorial-2.c factorial-2.c)
add_executable(prime.c prime.c)
