cmake_minimum_required(VERSION 3.29)
project(2024-3-for-a-while-marked C)

set(CMAKE_C_STANDARD 17)

add_executable(palindrome-1.c 2024-3-for-a-while-marked/palindrome-1.c)
add_executable(flip.c 2024-3-for-a-while-marked/flip.c)
add_executable(josephus.c 2024-3-for-a-while-marked/josephus.c)
add_executable(bubble-sort.c 2024-3-for-a-while-marked/bubble-sort.c)
add_executable(b-ternary-1.c 2024-3-for-a-while-marked/b-ternary-1.c)
add_executable(b-ternary-2.c 2024-3-for-a-while-marked/b-ternary-2.c)
