cmake_minimum_required(VERSION 3.29)
project(2024-3-for-a-while-marked C)

set(CMAKE_C_STANDARD 17)

add_executable(palindrome-1.c palindrome-1.c)
add_executable(flip.c flip.c)
add_executable(josephus.c josephus.c)
add_executable(bubble-sort.c bubble-sort.c)
add_executable(b-ternary-1.c b-ternary-1.c)
add_executable(b-ternary-2.c b-ternary-2.c)
