cmake_minimum_required(VERSION 3.29)
project(2024-3-for-a-while-nomark C)

set(CMAKE_C_STANDARD 17)

add_executable(gcd.c 2024-3-for-a-while-nomark/gcd.c)
add_executable(multiplication-table.c 2024-3-for-a-while-nomark/multiplication-table.c)
add_executable(calendar.c 2024-3-for-a-while-nomark/calendar.c)
add_executable(calculator.c 2024-3-for-a-while-nomark/calculator.c)
add_executable(decimal.c 2024-3-for-a-while-nomark/decimal.c)
add_executable(palindrome-2.c 2024-3-for-a-while-nomark/palindrome-2.c)
add_executable(quick-sort.c 2024-3-for-a-while-nomark/quick-sort.c)
add_executable(a+bRE "2024-3-for-a-while-nomark/a + b problem RE.c")
add_executable(super-cal.c 2024-3-for-a-while-nomark/super-cal.c)
