cmake_minimum_required(VERSION 3.29)
project(2024-3-for-a-while-nomark C)

set(CMAKE_C_STANDARD 17)

add_executable(gcd.c gcd.c)
add_executable(multiplication-table.c multiplication-table.c)
add_executable(calendar.c calendar.c)
add_executable(calculator.c calculator.c)
add_executable(decimal.c decimal.c)
add_executable(palindrome-2.c palindrome-2.c)
add_executable(quick-sort.c quick-sort.c)
add_executable(a+bRE "a + b problem RE.c")
add_executable(super-cal.c super-cal.c)
