cmake_minimum_required(VERSION 3.29)
project(2024-4-loops-marked C)

set(CMAKE_C_STANDARD 17)

add_executable(bit.c 2024-4-loops-marked/bit.c)
add_executable(behaviors.c 2024-4-loops-marked/behaviors.c)
add_executable(matrix-mult.c 2024-4-loops-marked/matrix-mult.c)
add_executable(guess.c 2024-4-loops-marked/guess.c)
add_executable(sudoku.c 2024-4-loops-marked/sudoku.c)
add_executable(mines-1.c 2024-4-loops-marked/mines-1.c)
add_executable(magic-square.c 2024-4-loops-marked/magic-square.c)
add_executable(match.c 2024-4-loops-marked/match.c)