cmake_minimum_required(VERSION 3.29)
project(2024-4-loops-marked C)

set(CMAKE_C_STANDARD 17)

add_executable(bit.c bit.c)
add_executable(behaviors.c behaviors.c)
add_executable(matrix-mult.c matrix-mult.c)
add_executable(guess.c guess.c)
add_executable(sudoku.c sudoku.c)
add_executable(mines-1.c mines-1.c)
add_executable(magic-square.c magic-square.c)
add_executable(match.c match.c)