cmake_minimum_required(VERSION 3.29)
project(2024-4-loops-nomark C)

set(CMAKE_C_STANDARD 17)

add_executable(similarity.c similarity.c)
add_executable(equation-2.c equation-2.c)
add_executable(life.c life.c)
add_executable(formation.c formation.c)
add_executable(statistics.c statistics.c)
add_executable(obstacle.c obstacle.c)
add_executable(trace.c trace.c)
add_executable(softmax.c softmax.c)
add_executable(seer.c seer.c)
