cmake_minimum_required(VERSION 3.29)
project(2024_5_function_marked C)

set(CMAKE_C_STANDARD 17)

add_executable(sum.c sum.c)
add_executable(next-permutation.c next-permutation.c)
add_executable(absolute-prime.c absolute-prime.c)
add_executable(converter-2.c converter-2.c)
add_executable(radix.c radix.c)
add_executable(pair.c pair.c)
