cmake_minimum_required(VERSION 3.29)
project(2024_6_data_types_marked C)

set(CMAKE_C_STANDARD 17)

add_executable(wine.c wine.c
        brackets.c)
add_executable(brackets.c brackets.c)
add_executable(mines-2.c mines-2.c)
add_executable(counting.c counting.c)
add_executable(whac-a-mole.c whac-a-mole.c)
add_executable(buddy.c buddy.c)
